Zrpsw 5608 update from upstream (#22)
* Fix protobuf bugs where proto2 syntax is specified (#1713)

Co-authored-by: Kexin Hui <khi@amazon.com>
Co-authored-by: Eric Wittmann <eric.wittmann@gmail.com>

* Bump logback-classic from 1.2.4 to 1.2.5 (#1712)

Bumps logback-classic from 1.2.4 to 1.2.5.

---
updated-dependencies:
- dependency-name: ch.qos.logback:logback-classic
  dependency-type: direct:production
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot] <support@github.com>

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* troubleshoot test failures (#1729)

* troubleshoot test failures

* try to fix selenium tests

* fix gh workflow

* fix returned date format (#1728)

* avro content type detection bug (#1733)

* tests for avro content type detection bug

mark bugs in tests

* try to fix failing kafkasql clustered test

* fix avro artifact type detection

* fix compilation error

* changes in tests to reflect bugs are fixed

* Use snake case in organization claim (#1730)

* Determine artifact type properly in ccompat layer (#1746)

* Remove no longer needed rest client modules from registry and refactor rest client to use new repo (#1700)

* Remove no longer needed rest client modules from registry and refactor rest client to use new repo

* Refactor tenant manager client to use new rest clients repo

* Add missing test dependencies

* Clean and simplify client dependencies

* Remove provider in tenant manager client

* Remove references to keycloak auth and refactor config to use only fully configured url in security

* Revert changes in test registry utils and remove unnecessary readme

* Remove unnecessary dependency in rest client

* Remove apache http client dependency

* Add apache http client dependency to rest clients

* Refactor token endpoint url

* Update version for common client library

Co-authored-by: Fabian Ma